--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "express": "~4.16.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.7",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "react-stripe-checkout": "^2.6.3",
+    "stripe": "^10.15.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
